--- a/MammyDictionary/app/src/main/res/values/strings.xml
+++ b/MammyDictionary/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Mammy Dictionary</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Mammy Dictionary</string>
     <string name="title_activity_test">test</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
