--- a/MammyDictionary/app/src/main/res/values/strings.xml
+++ b/MammyDictionary/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Mammy Dictionary</string>
     <string name="title_activity_main">Mammy Dictionary</string>
     <string name="title_activity_test">test</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Word Adding</string>
+    <string name="title_dashboard">All Searched Words</string>
+    <string name="title_notifications">Daily Words</string>
 </resources>
